--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,15 @@
                 </tr>
             </tbody>
         </table>
+       
+        <form ng-submit="vm.submit()" ng-controller="dataEntry.controller as vm" >
+            <input type="text" />
+           <!-- <input type="text" ng-model="npiNumber"/>
+            <input type="text" ng-model="firstName"/>
+            <input type="text" ng-model="lastName"/>
+            <input type="text" ng-model="middleName"/>-->
+            <input type="submit" value="submit"/>
+        </form> 
+        
     </body>
 </html>
