--- a/public/index.html
+++ b/public/index.html
@@ -38,12 +38,12 @@
             </tbody>
         </table>
        
-        <form ng-submit="vm.submit()" ng-controller="dataEntry.controller as vm" >
-            <input type="text" />
-           <!-- <input type="text" ng-model="npiNumber"/>
-            <input type="text" ng-model="firstName"/>
-            <input type="text" ng-model="lastName"/>
-            <input type="text" ng-model="middleName"/>-->
+        <form ng-submit="vm.postStaff()" ng-controller="dataEntry.controller as vm" >
+            <input type="text" name="vm.staffType" ng-model="vm.staffType"/>
+            <input type="text" ng-model="vm.npiNumber"/>
+            <input type="text" ng-model="vm.firstName"/>
+            <input type="text" ng-model="vm.lastName"/>
+            <input type="text" ng-model="vm.middleName"/>
             <input type="submit" value="submit"/>
         </form> 
         
