--- a/public/index.html
+++ b/public/index.html
@@ -38,12 +38,31 @@
             </tbody>
         </table>
        
-        <form ng-submit="vm.postStaff()" ng-controller="dataEntry.controller as vm" >
-            <input type="text" name="vm.staffType" ng-model="vm.staffType"/>
-            <input type="text" ng-model="vm.npiNumber"/>
-            <input type="text" ng-model="vm.firstName"/>
-            <input type="text" ng-model="vm.lastName"/>
-            <input type="text" ng-model="vm.middleName"/>
+        <form class="form" role="form" name="staffForm" ng-submit="vm.postStaff()" ng-controller="dataEntry.controller as vm" >
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <label for="staffType" class="mdl-textfield__label">Staff type</label>
+                <input id="staffType" class="mdl-textfield__input" type="text" ng-model="vm.staffType"/>
+            </div>
+
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <label for="npiNumber" class="mdl-textfield__label">National provider identifier #</label>
+                <input id="npiNumber" class="mdl-textfield__input" type="text" ng-model="vm.npiNumber"/>
+            </div>
+
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <label for="firstName" class="mdl-textfield__label">First name</label>
+                <input id="firstName" class="mdl-textfield__input" type="text" ng-model="vm.firstName"/>
+            </div>
+
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <label for="lastName" class="mdl-textfield__label">Last name</label>
+                <input id="lastName" class="mdl-textfield__input" type="text" ng-model="vm.lastName"/>
+            </div>
+
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <label for="middleName" class="mdl-textfield__label">Middle name</label>
+                <input id="middleName" class="mdl-textfield__input" type="text" ng-model="vm.middleName"/>
+            </div>
             <input type="submit" value="submit"/>
         </form> 
         
