--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,10 @@
 
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <label for="npiNumber" class="mdl-textfield__label">National provider identifier #</label>
-                <input id="npiNumber" class="mdl-textfield__input" type="text" ng-model="vm.npiNumber" ng-focus="vm.placeMask()" ng-blur="vm.removeMask()" ui-mask="{{vm.npiMask}}"/>
+                <input id="npiNumber" class="mdl-textfield__input" type="text" 
+                    ng-model="vm.npiNumber" ng-focus="vm.placeMask()" ng-blur="vm.removeMask()" ui-mask="{{vm.npiMask}}" 
+                    data-html="true" data-toggle="popover" data-container="body" data-trigger="focus" 
+                    data-content="The National Provider Idenifier is a unique 10-digit identifier number issued to health care providers>"/>
             </div>
 
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
@@ -63,7 +66,7 @@
                 <label for="middleName" class="mdl-textfield__label">Middle name</label>
                 <input id="middleName" class="mdl-textfield__input" type="text" ng-model="vm.middleName"/>
             </div>
-            <input type="submit" value="submit"/>
+            <input type="submit" value="submit" class="btn btn-primary"/>
         </form> 
         
     </body>
