changed key references to new JSON object being received from staffWebService

--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
             </thead>
             <tbody>
                 <tr ng-repeat="s in vm.staff">
-                    <td>{{s.id}}</td>
-                    <td>{{s.staffType}}</td>
-                    <td>{{s.npiNumber}}</td>
-                    <td>{{s.firstName}}</td>
-                    <td>{{s.lastName}}</td>
-                    <td>{{s.middleName}}</td>
+                    <td>{{s.SQUIRE_STAFF_ID}}</td>
+                    <td>{{s.Staff_Type}}</td>
+                    <td>{{s.NPI_Number}}</td>
+                    <td>{{s.First_Name}}</td>
+                    <td>{{s.Last_Name}}</td>
+                    <td>{{s.Middle_Name}}</td>
                 </tr>
             </tbody>
         </table>
