added ng-click to table row to allow for selecting a record and performing a crud op. right now just logging record ID to console.

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="s in vm.staff">
+                <tr ng-repeat="s in vm.staff" ng-click="vm.selectStaff(s)">
                     <td>{{s.SQUIRE_STAFF_ID}}</td>
                     <td>{{s.Staff_Type}}</td>
                     <td>{{s.NPI_Number}}</td>
