added ng-show in order to toggle edit/delete button group - currently toggles all rows on ng-click. change to only the row that was clicked

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
             <tbody>
                 <tr ng-repeat="s in vm.staff" ng-click="vm.selectStaff(s)">
                     <td>
-                        <div class="btn-group">
+                        <div ng-show="vm.btnGrp" class="btn-group">
                         <input type="button" value="Edit" class="btn btn-warning"/>
                         <input type="button" value="Delete" class="btn btn-danger"/>
                         </div>
