removed staff id input type from 'edit' template - replaced with model value

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                 <input type="button" value="Delete" class="btn btn-danger" ng-click="vm.delStaff(s)"/>
                 </div>
             </td>
-            <td><input type="text" ng-model="s.SQUIRE_STAFF_ID"/></td>
+            <td>{{s.SQUIRE_STAFF_ID}}</td>
             <td><input type="text" ng-model="s.Staff_Type"/></td>
             <td><input type="text" ng-model="s.NPI_Number"/></td>
             <td><input type="text" ng-model="s.First_Name"/></td>
