--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,20 @@
     </head>
 
     <body>
+        <table class="cbp-table-selectable mdl-js-data-table floating-table-header">
+            <thead>
+                <tr>
+                    <th>Action</th>
+                    <th>ID</th>
+                    <th>Staff Type</th>
+                    <th>NPI Number</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Middle Name</th>
+                </tr>
+            </thead>
+        </table>
+        <div class="floating-table-body" style="max-height: 200px;">
         <table ng-controller="dataDisplay.controller as vm" class="cbp-table table-striped mdl-js-data-table">
             <thead>
                 <tr>
@@ -33,6 +47,7 @@
                 </tr>
             </tbody>
         </table>
+        </div>
          <script type="text/ng-template" id="display">
             <td>
                 
