--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="cbp-card cbp-card-shadow ">
                     <div class="cbp-card__title">
-                        <h3 class="cbp-card__title-text">Staff Wizard</h3>
+                        <h2>Staff Wizard</h2>
                     </div>
                     <div class="cbp-card__actions cbp-card--border">
                         <form class="form" role="form" name="staffForm" ng-submit="vm.postStaff()" ng-controller="dataEntry.controller as vm" >
