amended state names

--- a/public/form.specialty.html
+++ b/public/form.specialty.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-    <label for="specialtyDescription" class="mdl-textfield__label">Specilaty description</label>
+    <label for="specialtyDescription" class="mdl-textfield__label">Specialty description</label>
     <textarea id="specialtyDescription" class="mdl-textfield__input" type="text" ng-model="vm.specialtyDescription" />
 </div>
 
