--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="cbp-card__actions cbp-card--border">
                     <form class="form" role="form" name="staffForm" ng-submit="vm.postStaff()" ng-controller="dataEntry.controller as vm">
-                        <div id="form-views" ui-view></div>
+                        <div  ui-view></div>
                     </form>
                 </div>
             </div>
