--- a/public/form.specialty.html
+++ b/public/form.specialty.html
@@ -5,9 +5,25 @@
 
 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
     <label for="specialtyDescription" class="mdl-textfield__label">Specialty description</label>
-    <textarea id="specialtyDescription" class="mdl-textfield__input" type="text" ng-model="vm.specialtyDescription" />
+    <textarea id="specialtyDescription" class="mdl-textfield__input" type="text" rows="2" ng-model="vm.specialtyDescription" ></textarea>
 </div>
 
-<div class="cbp-card__actions cbp-card--border">
-    <input type="submit" value="submit" class="btn btn-primary pull-right" />
+<div>
+    <a ui-sref="">
+        <button type="button" class="btn btn-default pull-right">
+        Next&nbsp;
+        <i class="fa fa-arrow-right"></i>
+        </button>
+    </a>
+
+</div>
+
+<div>
+    <a ui-sref="staff">
+        <button type="button" class="btn btn-default pull-left">
+        <i class="fa fa-arrow-left"></i>
+        Back&nbsp;
+        </button>
+    </a>
+
 </div>
