--- a/public/form.staff.html
+++ b/public/form.staff.html
@@ -27,3 +27,12 @@
 <div class="cbp-card__actions cbp-card--border">
     <input type="submit" value="submit" class="btn btn-primary pull-right" />
 </div>
+<div>
+    <a ui-sref="specialty">
+        <button type="button" class="btn btn-default">
+        Next&nbsp;
+        <i class="fa fa-arrow-right"></i>
+        </button>
+    </a>
+
+</div>
