--- a/public/index.html
+++ b/public/index.html
@@ -82,12 +82,24 @@
         </script>
 
     <div class="cbp-card-container container-fluid  row">
+
         <div class="col-md-6 col-md-offset-3">
             <div class="cbp-card cbp-card-shadow ">
                 <div class="cbp-card__title">
                     <h2>Staff Wizard</h2>
                 </div>
                 <div class="cbp-card__actions cbp-card--border">
+                    <div>
+                        <h4>Steps</h4>
+                        <ol class="nav-steps nav-stacked">
+                            <li ui-sref-active="active" ui-sref="staff">
+                               <span> Staff</span>
+                            </li>
+                            <li ui-sref-active="active" ui-sref="specialty">
+                               <span> Specialty</span>
+                            </li>
+                        </ol>
+                    </div>
                     <form class="form" role="form" name="staffForm" ng-submit="vm.postStaff()" ng-controller="dataEntry.controller as vm">
                         <div ui-view></div>
                     </form>
