--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
                         </ol>
                     </div>
                     <form class="form" role="form" name="staffForm" ng-submit="vm.postStaff()" ng-controller="dataEntry.controller as vm">
-                        <div ui-view></div>
+                        <div id="formViews" ui-view></div>
                     </form>
                 </div>
             </div>
