--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <script src="js/cbp-theme.js"></script>
     <script src="js/app.bundle.js"></script>
     <link media="screen" href="styles/cbp-theme.css" rel="stylesheet" />
+    <link media="screen" href="styles/slideInLeft.css" rel="stylesheet" />
+    <link media="screen" href="styles/slideOutRight.css" rel="stylesheet" />
     <link media="screen" href="styles/custom.css" rel="stylesheet" />
 </head>
 
@@ -81,7 +83,7 @@
             <td><input type="text" ng-model="s.Middle_Name"/></td>
         </script>
 
-    <div class="cbp-card-container container-fluid  row">
+    <div class="cbp-card-container container-fluid  row ">
 
         <div class="col-md-6 col-md-offset-3">
             <div class="cbp-card cbp-card-shadow ">
@@ -101,7 +103,7 @@
                         </ol>
                     </div>
                     <form class="form" role="form" name="staffForm" ng-submit="vm.postStaff()" ng-controller="dataEntry.controller as vm">
-                        <div id="formViews" ui-view></div>
+                        <div ui-view id="formViews" class="slideInLeft slideOutRight" ></div>
                     </form>
                 </div>
             </div>
