--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
     <script src="js/cbp-theme.js"></script>
     <script src="js/app.bundle.js"></script>
     <link media="screen" href="styles/cbp-theme.css" rel="stylesheet" />
-    <link media="screen" href="styles/slideInLeft.css" rel="stylesheet" />
-    <link media="screen" href="styles/slideOutRight.css" rel="stylesheet" />
+    <link media="screen" href="styles/animate.css" rel="stylesheet" />
     <link media="screen" href="styles/custom.css" rel="stylesheet" />
 </head>
 
@@ -103,7 +102,7 @@
                         </ol>
                     </div>
                     <form class="form" role="form" name="staffForm" ng-submit="vm.postStaff()" ng-controller="dataEntry.controller as vm">
-                        <div ui-view id="formViews" class="slideInLeft slideOutRight" ></div>
+                        <div ui-view id="formViews" class="animated slideInRight slideOutLeft"></div>
                     </form>
                 </div>
             </div>
