added slide animations to form. needed to add absolute positioning to the views when ng-enter and ng-leave fires to keep the pages from briefly stacking on top of each other and expanding the mdl card during animation. Also needed to make a minimum height for the card so that the views stay visible when absolutely positioned and taken out of the flow of the card container. Not sure if mdl cards shouldl be used like this but I thought it looked cool.

--- a/public/form.staff.html
+++ b/public/form.staff.html
@@ -25,9 +25,11 @@
         <label for="middleName" class="mdl-textfield__label">Middle name</label>
         <input id="middleName" class="mdl-textfield__input" type="text" ng-model="vm.middleName" />
     </div>
-    <div class="cbp-card__actions cbp-card--border">
+    
+    <div class="cbp-card__actions">
         <input type="submit" value="submit" class="btn btn-primary pull-right" />
     </div>
+    
     <div>
         <a ui-sref="specialty">
             <button type="button" class="btn btn-default">
