--- a/public/index.html
+++ b/public/index.html
@@ -119,8 +119,18 @@
 
 
 <div class="row">
-    <div class="col-md-4">
-        <button type="button" class="btn btn-primary btn-block" ng-click="vm.openModalForm('lg')">Open staff wizard!</button>
+    <div class=" col-md-4 cbp-card-container">
+        <div class="cbp-card cbp-card-shadow">
+            <div class="cbp-card__title">
+            <h3 class="cbp-card__title-text">Staff Wizard</h3>
+          </div>
+          <div class="cbp-card__supporting-text">
+          Click the 'Start' button to create a new staff record.  
+        </div>
+            <div class="cbp-card__actions cbp-card--border">
+                <button type="button" class="btn btn-primary btn-lg pull-right" ng-click="vm.openModalForm('lg')">Start!</button>
+            </div>
+        </div>
     </div>
 </div>
 </div>
