changed size of modal to medium

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
           Click the 'Start' button to create a new staff record.  
         </div>
             <div class="cbp-card__actions cbp-card--border">
-                <button type="button" class="btn btn-primary btn-lg pull-right" ng-click="vm.openModalForm('lg')">Start!</button>
+                <button type="button" class="btn btn-primary btn-lg pull-right" ng-click="vm.openModalForm('md')">Start!</button>
             </div>
         </div>
     </div>
