Replaced slide animation with fade animation to pritoritze work. Will revisit sliding animation

--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
                             </div>
     
                             <form class="form" role="form" name="staffForm" ng-submit="vm.postStaff()" >
-                                <div ui-view id="formViews" class="animated slideInRight slideOutLeft"></div>
+                                <div ui-view id="formViews" class="animated fadeIn fadeOut"></div>
                             </form>
     
                         </div>
