added specialty fields to view model and fixed element labels and ng-model references

--- a/public/form.specialty.html
+++ b/public/form.specialty.html
@@ -10,18 +10,18 @@
     </div>
 
      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <label for="specialty" class="mdl-textfield__label">Credential number</label>
-        <input id="specialty" class="mdl-textfield__input" type="text" ng-model="vm.credentialNumber" />
+        <label for="credentialNumber" class="mdl-textfield__label">Credential number</label>
+        <input id="credentialNumber" class="mdl-textfield__input" type="text" ng-model="vm.credentialNumber" />
     </div>
 
      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <label for="specialty" class="mdl-textfield__label">Issue date</label>
-        <input id="specialty" class="mdl-textfield__input" type="text" ng-model="vm.specialty" />
+        <label for="issueDate" class="mdl-textfield__label">Issue date</label>
+        <input id="issueDate" class="mdl-textfield__input" type="text" ng-model="vm.issueDate" />
     </div>
 
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <label for="specialty" class="mdl-textfield__label">Issuing organization</label>
-        <input id="specialty" class="mdl-textfield__input" type="text" ng-model="vm.specialty" />
+        <label for="issuingOrg" class="mdl-textfield__label">Issuing organization</label>
+        <input id="issuingOrg" class="mdl-textfield__input" type="text" ng-model="vm.issuingOrg" />
     </div>
 
     
