added vm data to input value attribute to display data entered by users across form page navigation. Moved npi mask function to modal controller to register MDL components after each template render.

--- a/public/form.specialty.html
+++ b/public/form.specialty.html
@@ -1,12 +1,12 @@
 <div id="form.specialty"  >
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <label for="specialty" class="mdl-textfield__label">Specialty</label>
-        <input id="specialty" class="mdl-textfield__input" type="text" ng-model="vm.specialty" />
+        <input id="specialty" class="mdl-textfield__input" type="text" ng-model="vm.specialty" value="{{vm.specialty}}" />
     </div>
     
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <label for="specialtyDescription" class="mdl-textfield__label">Specialty description</label>
-        <textarea id="specialtyDescription" class="mdl-textfield__input" type="text" rows="2" ng-model="vm.specialtyDescription" ></textarea>
+        <textarea id="specialtyDescription" class="mdl-textfield__input" type="text" rows="2" ng-model="vm.specialtyDescription" value="{{vm.specialtyDescription}}"></textarea>
     </div>
 
      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
@@ -16,12 +16,12 @@
 
      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <label for="issueDate" class="mdl-textfield__label">Issue date</label>
-        <input id="issueDate" class="mdl-textfield__input" type="text" ng-model="vm.issueDate" />
+        <input id="issueDate" class="mdl-textfield__input" type="text" ng-model="vm.issueDate" value="{{vm.issueDate}}"/>
     </div>
 
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <label for="issuingOrg" class="mdl-textfield__label">Issuing organization</label>
-        <input id="issuingOrg" class="mdl-textfield__input" type="text" ng-model="vm.issuingOrg" />
+        <input id="issuingOrg" class="mdl-textfield__input" type="text" ng-model="vm.issuingOrg" value="{{vm.issuingOrg}}" />
     </div>
 
     
